--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://www.kingstms.com/",
-  "name": "kings-tms-clinic",
+  "homepage": "https://christiandc19.github.io/healing_mind/",
+  "name": "healing_mind",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
