--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://christiandc19.github.io/healing_mind/",
+  "homepage": "https://healingmind.biz/",
   "name": "healing_mind",
   "version": "0.1.0",
   "private": true,
